@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.2</version>
+		<version>3.2.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.multi</groupId>
@@ -48,7 +48,6 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>kafka</artifactId>
-			<version>1.15.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -114,6 +113,17 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<image>
+					<builder>paketobuildpacks/builder:tiny</builder>
+					<env>
+						<JAVA_TOOL_OPTIONS>--enable-preview</JAVA_TOOL_OPTIONS></env>
+					</image>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
             <plugin>
